--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">To-Do Management</string>
+    <string name="app_name">To-Do</string>
     <string name="task_list">Task List</string>
     <string name="confirmation_title">Warning</string>
-    <string name="confirmation_message">Do you want to delete "%1$s", this action can’t be undone.</string>
+    <string name="confirmation_message">Do you want to delete \"%1$s\", this action can’t be undone.</string>
     <string name="confirmation_ok">OK</string>
     <string name="confirmation_cancel">Cancel</string>
     <string name="add_task">Add a task</string>
@@ -10,4 +10,7 @@
     <string name="task_time">Time</string>
     <string name="task_cancel">Cancel</string>
     <string name="task_add">Add</string>
+    <string name="timeInAm">AM</string>
+    <string name="timeInPm">PM</string>
+    <string name="status_pending">Pending</string>
 </resources>
